--- a/ethernet/ethernet.srcs/sources_1/bd/design_1/ui/bd_1f5defd0.ui
+++ b/ethernet/ethernet.srcs/sources_1/bd/design_1/ui/bd_1f5defd0.ui
@@ -4,72 +4,74 @@
    "PinnedPorts":"",
    "guistr":"# # String gsaved with Nlview 7.0.19  2019-03-26 bk=1.5019 VDI=41 GEI=35 GUI=JA:9.0 TLS
 #  -string -flagsOSRD
-preplace port usb_uart -pg 1 -lvl 8 -x 2710 -y 380 -defaultsOSRD
-preplace port eth_mdio_mdc -pg 1 -lvl 8 -x 2710 -y 660 -defaultsOSRD
-preplace port eth_rmii -pg 1 -lvl 8 -x 2710 -y 570 -defaultsOSRD
-preplace port DDR2_0 -pg 1 -lvl 8 -x 2710 -y 140 -defaultsOSRD
+preplace port usb_uart -pg 1 -lvl 8 -x 2730 -y 380 -defaultsOSRD
+preplace port eth_mdio_mdc -pg 1 -lvl 8 -x 2730 -y 660 -defaultsOSRD
+preplace port eth_rmii -pg 1 -lvl 8 -x 2730 -y 570 -defaultsOSRD
+preplace port DDR2_0 -pg 1 -lvl 8 -x 2730 -y 140 -defaultsOSRD
 preplace port reset -pg 1 -lvl 0 -x -50 -y 720 -defaultsOSRD
 preplace port sys_clock -pg 1 -lvl 0 -x -50 -y 820 -defaultsOSRD
-preplace port eth_ref_clk -pg 1 -lvl 8 -x 2710 -y 640 -defaultsOSRD
-preplace inst microblaze_0 -pg 1 -lvl 5 -x 1680 -y 840 -defaultsOSRD
-preplace inst microblaze_0_local_memory -pg 1 -lvl 6 -x 2210 -y 830 -defaultsOSRD
+preplace port eth_ref_clk -pg 1 -lvl 8 -x 2730 -y 640 -defaultsOSRD
+preplace portBus axi_3_slave -pg 1 -lvl 2 -x 370 -y 1050 -defaultsOSRD -bot
+preplace inst microblaze_0 -pg 1 -lvl 5 -x 1680 -y 870 -defaultsOSRD
+preplace inst microblaze_0_local_memory -pg 1 -lvl 6 -x 2240 -y 830 -defaultsOSRD
 preplace inst microblaze_0_axi_periph -pg 1 -lvl 3 -x 840 -y 460 -defaultsOSRD
 preplace inst microblaze_0_axi_intc -pg 1 -lvl 4 -x 1180 -y 480 -defaultsOSRD
 preplace inst microblaze_0_xlconcat -pg 1 -lvl 3 -x 840 -y 210 -defaultsOSRD
 preplace inst mdm_1 -pg 1 -lvl 4 -x 1180 -y 770 -defaultsOSRD
 preplace inst clk_wiz_1 -pg 1 -lvl 1 -x 110 -y 810 -defaultsOSRD
 preplace inst rst_clk_wiz_1_100M -pg 1 -lvl 2 -x 470 -y 800 -defaultsOSRD
-preplace inst mig_7series_0 -pg 1 -lvl 7 -x 2530 -y 190 -defaultsOSRD
-preplace inst mii_to_rmii_0 -pg 1 -lvl 7 -x 2530 -y 570 -defaultsOSRD
-preplace inst axi_uartlite_0 -pg 1 -lvl 7 -x 2530 -y 390 -defaultsOSRD
-preplace inst axi_ethernetlite_0 -pg 1 -lvl 6 -x 2210 -y 660 -defaultsOSRD
+preplace inst mig_7series_0 -pg 1 -lvl 7 -x 2560 -y 190 -defaultsOSRD
+preplace inst mii_to_rmii_0 -pg 1 -lvl 7 -x 2560 -y 570 -defaultsOSRD
+preplace inst axi_uartlite_0 -pg 1 -lvl 7 -x 2560 -y 390 -defaultsOSRD
+preplace inst axi_ethernetlite_0 -pg 1 -lvl 6 -x 2240 -y 660 -defaultsOSRD
 preplace inst axi_timer_0 -pg 1 -lvl 4 -x 1180 -y 250 -defaultsOSRD
-preplace inst axi_smc -pg 1 -lvl 6 -x 2210 -y 470 -defaultsOSRD
+preplace inst axi_smc -pg 1 -lvl 6 -x 2240 -y 470 -defaultsOSRD
 preplace inst rst_mig_7series_0_81M -pg 1 -lvl 5 -x 1680 -y 90 -defaultsOSRD
 preplace inst util_vector_logic_0 -pg 1 -lvl 4 -x 1180 -y 60 -defaultsOSRD -resize 135 88
 preplace inst microblaze_com_axi_0 -pg 1 -lvl 5 -x 1680 -y 570 -defaultsOSRD -orient R180
 preplace inst master_axi_test_0 -pg 1 -lvl 5 -x 1680 -y 330 -defaultsOSRD -orient R180
-preplace netloc microblaze_0_intr 1 3 1 1010 210n
-preplace netloc microblaze_0_Clk 1 1 6 220 560 660 280 1020 360 1350 450 1990 350 2390J
+preplace netloc microblaze_0_intr 1 3 1 1030 210n
+preplace netloc microblaze_0_Clk 1 1 6 220 560 660 140 1040 140 1340 450 1990 350 2420J
 preplace netloc clk_wiz_1_locked 1 1 1 N 840
-preplace netloc rst_clk_wiz_1_100M_bus_struct_reset 1 2 4 670J 690 NJ 690 NJ 690 1970
-preplace netloc rst_clk_wiz_1_100M_peripheral_aresetn 1 2 5 650 140 1040 130 1370J 440 2060 360 2370J
-preplace netloc mdm_1_debug_sys_rst 1 1 4 250 660 NJ 660 NJ 660 1310
-preplace netloc clk_wiz_1_clk_out2 1 1 6 210 -20 NJ -20 NJ -20 1390J 200 NJ 200 NJ
-preplace netloc clk_wiz_1_clk_out3 1 1 7 230J 670 NJ 670 NJ 670 NJ 670 2000J 740 2400 650 2670J
-preplace netloc reset_1 1 0 7 -30 720 240 680 NJ 680 NJ 680 NJ 680 2020J 580 2380
+preplace netloc rst_clk_wiz_1_100M_bus_struct_reset 1 2 4 670J 700 NJ 700 NJ 700 1980
+preplace netloc rst_clk_wiz_1_100M_peripheral_aresetn 1 2 5 650 280 1020 360 1360J 440 2060 360 2400J
+preplace netloc mdm_1_debug_sys_rst 1 1 4 250 690 NJ 690 NJ 690 1310
+preplace netloc clk_wiz_1_clk_out2 1 1 6 210 130 NJ 130 NJ 130 1360J 200 NJ 200 NJ
+preplace netloc clk_wiz_1_clk_out3 1 1 7 230J 670 NJ 670 NJ 670 NJ 670 2050J 580 2400 650 2700J
+preplace netloc reset_1 1 0 7 -30 720 240 680 NJ 680 NJ 680 NJ 680 2040J 570 2410
 preplace netloc sys_clock_1 1 0 1 NJ 820
-preplace netloc mig_7series_0_ui_clk 1 4 4 1440 -30 2070 80 NJ 80 2660
-preplace netloc mig_7series_0_mmcm_locked 1 4 4 1430 -40 NJ -40 NJ -40 2680
-preplace netloc mig_7series_0_ui_clk_sync_rst 1 4 4 1420 -50 NJ -50 NJ -50 2670
-preplace netloc rst_mig_7series_0_81M_peripheral_aresetn 1 5 2 2050 220 N
-preplace netloc axi_timer_0_interrupt 1 2 3 680 -30 NJ -30 1350
-preplace netloc axi_ethernetlite_0_ip2intc_irpt 1 2 5 660 -40 NJ -40 1410J 190 NJ 190 2350
-preplace netloc rst_clk_wiz_1_100M_mb_reset 1 2 3 NJ 760 1030 700 1320
-preplace netloc util_vector_logic_0_Res 1 4 2 1400 -20 1940
-preplace netloc microblaze_0_axi_periph_M02_AXI 1 3 3 1050J 140 1380J 210 2040
-preplace netloc microblaze_0_axi_periph_M01_AXI 1 3 4 990 370 1360J 430 2000J 370 NJ
-preplace netloc microblaze_0_dlmb_1 1 5 1 1980 780n
-preplace netloc microblaze_0_interrupt 1 4 1 1340 480n
-preplace netloc axi_smc_M00_AXI 1 6 1 2360 160n
-preplace netloc microblaze_0_M_AXI_DC 1 5 1 2010 430n
-preplace netloc microblaze_0_axi_periph_M03_AXI 1 3 1 1000 200n
-preplace netloc microblaze_0_debug 1 4 1 1330 760n
+preplace netloc mig_7series_0_ui_clk 1 4 4 1360 -20 2040 70 NJ 70 2700
+preplace netloc mig_7series_0_mmcm_locked 1 4 4 1370 190 1990J 80 NJ 80 2690
+preplace netloc mig_7series_0_ui_clk_sync_rst 1 4 4 1340 -40 NJ -40 NJ -40 2710
+preplace netloc rst_mig_7series_0_81M_peripheral_aresetn 1 5 2 2010 220 N
+preplace netloc axi_timer_0_interrupt 1 2 3 690 -10 NJ -10 1310
+preplace netloc axi_ethernetlite_0_ip2intc_irpt 1 2 5 670 -60 NJ -60 NJ -60 NJ -60 2380
+preplace netloc rst_clk_wiz_1_100M_mb_reset 1 2 3 NJ 760 1050 970 N
+preplace netloc util_vector_logic_0_Res 1 4 2 1320 -10 1950
+preplace netloc axi_3_slave_1 1 2 3 670 850 NJ 850 NJ
+preplace netloc microblaze_0_M_AXI_IC 1 5 1 2070 450n
+preplace netloc microblaze_0_ilmb_1 1 5 1 N 820
+preplace netloc microblaze_0_dlmb_1 1 5 1 N 800
+preplace netloc microblaze_0_M_AXI_DC 1 5 1 2020 430n
 preplace netloc mig_7series_0_DDR2 1 7 1 NJ 140
-preplace netloc microblaze_0_M_AXI_IC 1 5 1 2030 450n
-preplace netloc axi_ethernetlite_0_MII 1 6 1 2390 550n
-preplace netloc axi_uartlite_0_UART 1 7 1 NJ 380
-preplace netloc microblaze_0_ilmb_1 1 5 1 1960 800n
-preplace netloc microblaze_0_M1_AXIS 1 5 1 1950 370n
-preplace netloc mii_to_rmii_0_RMII_PHY_M 1 7 1 NJ 570
-preplace netloc master_axi_test_0_M00_AXIS 1 4 1 1430 330n
+preplace netloc microblaze_com_axi_0_m00_axis 1 4 1 1380 570n
+preplace netloc axi_smc_M00_AXI 1 6 1 2390 160n
+preplace netloc microblaze_0_axi_dp 1 2 4 680 -50 NJ -50 NJ -50 1970
+preplace netloc microblaze_0_debug 1 4 1 1320 760n
+preplace netloc microblaze_0_M0_AXIS 1 5 1 1950 610n
+preplace netloc microblaze_0_M1_AXIS 1 5 1 1960 370n
+preplace netloc microblaze_0_axi_periph_M02_AXI 1 3 3 990J -30 NJ -30 2030
+preplace netloc microblaze_0_axi_periph_M01_AXI 1 3 4 1000 370 1350J 430 2000J 370 NJ
+preplace netloc axi_ethernetlite_0_MII 1 6 1 2420 550n
 preplace netloc microblaze_0_intc_axi 1 3 1 N 430
+preplace netloc microblaze_0_axi_periph_M03_AXI 1 3 1 1010 200n
+preplace netloc microblaze_0_interrupt 1 4 1 1330 480n
 preplace netloc axi_ethernetlite_0_MDIO 1 6 2 NJ 660 NJ
-preplace netloc microblaze_0_axi_dp 1 2 4 670 -10 NJ -10 NJ -10 1930
-preplace netloc microblaze_com_axi_0_m00_axis 1 4 1 1440 570n
-preplace netloc microblaze_0_M0_AXIS 1 5 1 1920 610n
-levelinfo -pg 1 -50 110 470 840 1180 1680 2210 2530 2710
-pagesize -pg 1 -db -bbox -sgen -170 -60 2870 1110
+preplace netloc master_axi_test_0_M00_AXIS 1 4 1 1370 330n
+preplace netloc axi_uartlite_0_UART 1 7 1 NJ 380
+preplace netloc mii_to_rmii_0_RMII_PHY_M 1 7 1 NJ 570
+levelinfo -pg 1 -50 110 470 840 1180 1680 2240 2560 2730
+pagesize -pg 1 -db -bbox -sgen -170 -70 2890 1220
 "
 }
 {
